# cctv_ai_worker

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
app/: schemas.py  settings.py  worker.py
