[project]
name = "cctv-ai-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "docker>=7.1.0",
    "faststream>=0.6.7",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
